--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -1284,6 +1284,19 @@ There is a theorem called the
 </p>
 
 <p></p>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;Prove that if $(X,Y)$  are jointly distributed random variables with $X$  and
+ $Y$  both (marginally) continuous, then $(X,Y)$  must be jointly continuous as well. 
+<p><a
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
+class="ans" id="lab22">
+Follows from the fact that if $x\leq a$  and $y\leq b$, then $F(a,b)-F(x,y) \leq P(x&lt; X
+ \leq a) + P(y&lt; Y\leq b)$.
+</div></p>
+
+</p>
+
+<p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
