--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>October 22, 2025:</strong></dt>
+<dd><p>Added hints to all the conditional distribution problems.</p>
+</dd>
 <dt><strong>October 21, 2025:</strong></dt>
 <dd><ul>
 <li><p>Corrected minor typos here and there. Thanks to Tushti and Mayukh.</p></li>
