--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,12 @@
 <html><body>
 <dl>
 <dt><strong>October 22, 2025:</strong></dt>
-<dd><p>Added hints to all the conditional distribution problems.</p>
+<dd><ul>
+<li>Added hints to all the conditional distribution problems.
+<ul>
+<li>Also added a last exercise in the joint distributions page.</li>
+</ul></li>
+</ul>
 </dd>
 <dt><strong>October 21, 2025:</strong></dt>
 <dd><ul>
