--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1098,49 +1098,125 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[infdist1.png]</font><img width="" src="image/infdist1.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[infdist1.png]</font><img width="" src="image/infdist1.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
+class="ans" id="lab17">
+The chance that 7 does not occur in a sequence of length $n$  is $(0.9)^n.$  So we are looking for the smallest
+ $n$  such that $1-0.9^n \geq 0.9$. 
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[infdist2.png]</font><img width="" src="image/infdist2.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[infdist2.png]</font><img width="" src="image/infdist2.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
+class="ans" id="lab18">Let us find the probability that the preassigned player
+ has all the 4 aces in one dealing. 
+<p></p>
+
+<ul>
+
+<li>
+<b>Step 1:</b> Give the 4 aces to that player: 1 way</li>
+
+<li>
+<b>Step 2:</b> Give the 9 more cards to  that player: $\binom{52-4}{9}$ ways</li>
+
+<li>
+<b>Step 3:</b> Deal the remaining 39 cards  among the other 3 playes:  $\frac{39!}{13!13!13!}$ ways.</li>
+
+</ul>
+Total number of ways of dealing is $\frac{52!}{13!13!13!13!}$. So the probability is $\frac{13\times\cdots\times10}{52\times\cdots\times49} = p$,
+ say. 
+<p></p>
+Then the probability of this happening at lest once in $n$  independent dealings is $1-(1-p)^n$. We are looking
+ for the smallest $n$  such that $1-(1-p)^n\geq \frac 12$. 
+</div></p>  
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;(Easy)<font size="-2">[infdist3.png]</font><img width="" src="image/infdist3.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 19:</b>&nbsp;(Easy)<font size="-2">[infdist3.png]</font><img width="" src="image/infdist3.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
+class="ans" id="lab19">
+Let $X$  be the number of times the target is hit. Then $X\sim Binom\left(10,\frac 15\right)$. We
+ are looking for $P(X\geq 2) = 1-P(X=0)-P(X=1)$.
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;(Easy)<font size="-2">[infdist4.png]</font><img width="" src="image/infdist4.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 20:</b>&nbsp;(Easy)<font size="-2">[infdist4.png]</font><img width="" src="image/infdist4.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
+class="ans" id="lab20">
+Wit $X$  as in the last hint, find $P(X\geq 2|X\geq 1)$. 
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;(Easy)<font size="-2">[infdist5.png]</font><img width="" src="image/infdist5.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 21:</b>&nbsp;(Easy)<font size="-2">[infdist5.png]</font><img width="" src="image/infdist5.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
+class="ans" id="lab21">Let $X = $ number of lefties among 200 people. 
+<p></p>
+Then $X\sim Binom(200, 0.01)$. Find $P(X\geq 4)$.
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;(Easy)<font size="-2">[infdist6.png]</font><img width="" src="image/infdist6.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 22:</b>&nbsp;(Easy)<font size="-2">[infdist7.png]</font><img width="" src="image/infdist7.png" style="vertical-align:text-top;">Use Poisson distribution.<p><a
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
+class="ans" id="lab22">
+Let a random page have $X$  misprints. Then we assume $X\sim Poi(\lambda)$  for some $\lambda$. Now $E(X) = \lambda$.
+ We estimate $\lambda$  as $\frac{500}{500} = 1$. So the problem is to find $P(X\geq 3)$  where $X\sim Poi(1)$.
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;(Easy)<font size="-2">[infdist7.png]</font><img width="" src="image/infdist7.png" style="vertical-align:text-top;">Use Poisson distribution.<hr>
+<b>EXERCISE 23:</b>&nbsp;(Medium)<font size="-2">[infdist8.png]</font><img width="" src="image/infdist8.png" style="vertical-align:text-top;">
+<p></p>
+Use Poisson distribution.<p><a
+href="javascript:hideShow('lab23')"><b>[Hint]</b></a><div
+class="ans" id="lab23">
+If $X$  is the number of colour-blind persons in an SRSWR of size $n$, then $X\sim Binom(n,0.01)$. 
+<p></p>
+We want $n$  such that $P(X\geq 1) \geq 0.95$, <i>i.e.</i>, $1-P(X=0) \geq 0.95$.  
+</div></p>
+<hr>
+</p>
+
+<p></p>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;(Medium)<font size="-2">[infdist9.png]</font><img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;(Medium)<font size="-2">[infdist8.png]</font><img width="" src="image/infdist8.png" style="vertical-align:text-top;">Use Poisson distribution.<hr>
+<b>EXERCISE 25:</b>&nbsp;(Medium)<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab24')"><b>[Hint]</b></a><div
+class="ans" id="lab24">
+Think of the problem like this. The pedestrian arrives, and starts tossing a coin with $P(head)=0$  once every second.
+ If the outcome is a head, he waits for that second, and tosses the coin again the next second. If it is tail, (s)he crosses.
+<p></p>
+With this formulation waiting for 0 second is like having a tail in the first toss. Waiting for
+ exactly 1 second is like having head, tail.  
+<p></p>
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;(Medium)<font size="-2">[infdist9.png]</font><img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 26:</b>&nbsp;(Easy)<font size="-2">[infdist11.png]</font><img width="" src="image/infdist11.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
+class="ans" id="lab25">Let $X,Y$  be the their numbers of heads (I mean
+of  their tosses, not their own!) Then $X,Y$  are IID $Binom\left(n,\frac 12\right)$. Find
+ $P(X=Y) = \sum_0^n P(X=k)^2=\cdots.$.</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;(Medium)<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 27:</b>&nbsp;(Hard)<font size="-2">[infdist12.png]</font><img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;(Easy)<font size="-2">[infdist11.png]</font><img width="" src="image/infdist11.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 28:</b>&nbsp;(Medium)<font size="-2">[infdist13.png]</font><img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 28:</b>&nbsp;(Hard)<font size="-2">[infdist12.png]</font><img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 29:</b>&nbsp;(Medium)<font size="-2">[infdist14.png]</font><img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 29:</b>&nbsp;(Medium)<font size="-2">[infdist13.png]</font><img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
-</p>
-::<p>
-<b>EXERCISE 30:</b>&nbsp;(Medium)<font size="-2">[infdist14.png]</font><img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
-</p>
-::<p>
-<b>EXERCISE 31:</b>&nbsp;(Medium)Show that 
+<b>EXERCISE 30:</b>&nbsp;(Medium)Show that 
 $$
 \frac{\lambda^k}{k!} \left(1-\frac \lambda n\right)^{n-k} 
 \geq
@@ -1151,7 +1227,7 @@ where $\lambda = np.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 32:</b>&nbsp;(Medium)Use the above inequality to show that 
+<b>EXERCISE 31:</b>&nbsp;(Medium)Use the above inequality to show that 
 $$
 \frac{e^{-\lambda}\lambda^k}{k!} e^{k \lambda/n}
 &gt;
@@ -1162,7 +1238,7 @@ $$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 33:</b>&nbsp;(Hard)(Banach's matchbox problem)
+<b>EXERCISE 32:</b>&nbsp;(Hard)(Banach's matchbox problem)
 A certain mathematician has two matchboxes (containing $n$
 matches each), one in his left pocket, the other in the
 right. When he needs to light a cigar (smoking which, BTW, is
@@ -1178,18 +1254,18 @@ box $n$ times without ever using the other box.]
 
 </p>
 ::::<p>
-<b>EXERCISE 34:</b>&nbsp;(Medium) <font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 33:</b>&nbsp;(Medium) <font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 35:</b>&nbsp;(Easy)<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 34:</b>&nbsp;(Easy)<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
 ::::<p>
-<b>EXERCISE 36:</b>&nbsp;(Easy)<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 35:</b>&nbsp;(Easy)<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 ::<p>
-<b>EXERCISE 37:</b>&nbsp;(Easy)Find the distribution of $X$  where <font size="-2">[dtwo17.png]</font><img width="" src="image/dtwo17.png" style="vertical-align:text-top;">
+<b>EXERCISE 36:</b>&nbsp;(Easy)Find the distribution of $X$  where <font size="-2">[dtwo17.png]</font><img width="" src="image/dtwo17.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
-class="ans" id="lab17">
+href="javascript:hideShow('lab26')"><b>[Hint]</b></a><div
+class="ans" id="lab26">
 Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
  cannot be a changeover at $i=1.$  
 <p></p>
@@ -1201,9 +1277,9 @@ So $E(X_i) = \cdots.$
 
 </p>
 ::<p>
-<b>EXERCISE 38:</b>&nbsp;(Easy)<font size="-2">[dtwo37.png]</font><img width="" src="image/dtwo37.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 37:</b>&nbsp;(Easy)<font size="-2">[dtwo37.png]</font><img width="" src="image/dtwo37.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 39:</b>&nbsp;(Easy)<font size="-2">[dtwo38.png]</font><img width="" src="image/dtwo38.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 38:</b>&nbsp;(Easy)<font size="-2">[dtwo38.png]</font><img width="" src="image/dtwo38.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
