--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -908,7 +908,7 @@ class="ans" id="lab5">(a) $\sum_1^ \infty k\cdot \left(1-\frac 1n\right)^{k-1}\c
 <p><a
 href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">
-Here $p$  is he says, and $p^*$  is what he believes. The meteorologist is not an honest one, and may 
+Here $p$  is what he says, and $p^*$  is what he believes. The meteorologist is not an honest one, and may 
 say something different from what he believes. His only aim is to maximise the expected score. 
 <p></p>
 The expected score is 
