--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -408,7 +408,7 @@ Notice that convergence is not a problem, because we have assumed $|t| &lt; 1$, 
 <p></p>
 ::<p>
 <b>EXERCISE 8:</b>&nbsp;(Medium) In general show that for $n\in{\mathbb N}$  the PGF of $X_n$  is $\xi_n(t) =
- \xi(\xi_{n-1}(t))$.</p>
+ \xi_{n-1}(\xi(t))=(\underbrace{\xi\circ\cdots\circ\xi}_{n})(t)$.</p>
 
 <p></p>
 Now $P(X_n=0) = \xi_n(0)$. 
