--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,8 +1,13 @@
 <html><body>
 <dl>
+<dt><strong>October 24, 2025:</strong></dt>
+<dd><ul>
+<li>Added hints to more problems.</li>
+</ul>
+</dd>
 <dt><strong>October 22, 2025:</strong></dt>
 <dd><ul>
-<li>Added hints to all the conditional distribution problems.
+<li><p>Added hints to all the conditional distribution problems.</p>
 <ul>
 <li>Also added a last exercise in the joint distributions page.</li>
 </ul></li>
