--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,7 +2,8 @@
 <dl>
 <dt><strong>October 24, 2025:</strong></dt>
 <dd><ul>
-<li>Added hints to more problems.</li>
+<li><p>Added hints to more problems.</p></li>
+<li><p>Simplified the hint of Exercise 11 in the Random Walk page.</p></li>
 </ul>
 </dd>
 <dt><strong>October 22, 2025:</strong></dt>
