--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>October 26, 2025:</strong></dt>
+<dd><ul>
+<li>Added hints to more problems.</li>
+</ul>
+</dd>
 <dt><strong>October 24, 2025:</strong></dt>
 <dd><ul>
 <li><p>Added hints to more problems.</p></li>
