--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -505,7 +505,7 @@ So by property of Bernoulli distribution we have
 $$
 Var(Z)=0.01(1-0.01)=0.0099
 $$
-[Thanks to Tushti for corrected a typo
+[Thanks to Tushti for corrected a typo.]
  ■
 </p>
 
@@ -1261,7 +1261,23 @@ name="Problems for practice">Problems for practice</a></h1>
 ::<p>
 <b>EXERCISE 21:</b>&nbsp;(Medium)<font size="-2">[dtwo8.png]</font><img width="" src="image/dtwo8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;(Hard)<font size="-2">[dtwo9.png]</font><img width="" src="image/dtwo9.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 22:</b>&nbsp;(Hard)<font size="-2">[dtwo9.png]</font><img width="" src="image/dtwo9.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
+class="ans" id="lab14"><b>First part:</b> Let us start by considering one possible sequence of results that will require exactly 7 games: AAABBBB.
+ But BBBBAAA is not possible, because here the decision is already clear after the fourth game. So we need a sequence of
+ length 7 such that there are exactly 4 of the last symbol. Each such sequence must have exactly 3 of the other symbol. Each
+ such sequence ending with A has probability $p^4(1-p)^3$  while each such sequence ending with B has probability $p^3(1-p)^4$.
+<p></p>
+All that remains is to count how many sequences of these two types there are. It is an easy calculus exercise to show that
+ the maximum occurs at $p=\frac 12$. 
+<p></p>
+
+<b>Second part:</b>  If $i=2$, the decision must be made after playing at most 3 games (pigeon hole) and
+ at least 2 games. Find the probability of each as in the first part. The case $i=3$  is similar.
+</div></p>
+
+</p>
 ::<p>
 <b>EXERCISE 23:</b>&nbsp;(Medium)<font size="-2">[dtwo10.png]</font><img width="" src="image/dtwo10.png" style="vertical-align:text-top;"></p>
 ::<p>
