--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -863,7 +863,7 @@ Now use the reflection principle.
 ::<p>
 <b>EXERCISE 12:</b>&nbsp;(Medium)
 Consider all paths of length $2n$ starting at $(0,0).$
-What is the number of these paths that return to $0$
+What is the number of these paths that return to $0$  <i>for the first time</i>
 at $2r$ for some given $r &lt; n?$ Also, how many of these
 return to 0 from the positive side?
 </p>
