--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -958,6 +958,14 @@ $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
 </center>
 Then
  $E(X_1|X_1+X_2+X_3=6)=1\neq \frac 63.$ 
+<p></p>
+Here $(X_1,X_2,X_3)$  are jointly distributed with identical marginal distributions. But that does not mean that the
+ joint distribution of $(X_1,X_2,X_3)$  and $(X_2,X_1,X_3)$  is the same. So in
+ particular, $E(X_1|X_1+X_2+X_3)$  need not equal $E(X_2|X_1+X_2+X_3)$. 
+<p></p>
+But in the original problem the $X_i$'s were also given to be independent. So there indeed for any permutation $\pi$ 
+ of $(1,2,...,n)$  the joint distribution of $(X_1,...,X_n)$  was the same as that of $(X_{\pi(1)},...,X_{\pi(n)})$.
+ So $E(X_i|X_1+\cdots+X_n)$  was free of $i$.
 </div></p>
 
 <hr>
