--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,6 +1,11 @@
 <html><body>
 <dl>
-<dt><strong>October 26, 2025:</strong></dt>
+<dt><strong>October 29, 2025:</strong></dt>
+<dd><ul>
+<li>Added some extra discussion to the existing hint of Exercise 25 in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
+</ul>
+</dd>
+<dt><strong>October 28, 2025:</strong></dt>
 <dd><ul>
 <li>Added hint to Exercise 22 of the <a href="distrib1.html" target="naya">Distributions with finite supports</a> page.</li>
 </ul>
