--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -769,8 +769,28 @@ Similarly for $P(I_jI_k=1).$
 <b>EXERCISE 17:</b>&nbsp;(Medium) <font size="-2">[morecond3.png]</font><img width="" src="image/morecond3.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
-class="ans" id="lab17">The problem is basically optimising $\sum P_i^2$ subject
-to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  </div></p>
+class="ans" id="lab17">(a) $\mu=\sum P_i$.
+<p></p>
+(b) The problem is basically minimising $\sum P_i^2$ subject
+to $\sum P_i=\mu$ being fixed. Cauchy-Scwartz might help.  
+<p></p>
+(c) Here we have to maximise $\sum P_i^2$  subject to $\sum P_i=\mu.$  First notice that
+ in any maximising $(P_1,...,P_n)$  al but at most one $P_i$  must be either $0$ 
+ or $1$. Because if  $P_i,P_j\in(0,1)$  for $i\neq j$, then take the smaller one
+ closer to zero and the larger one closer to 1 by the same amount. Then $\sum P_i$  remains unaltered, but $\sum P_i^2$ 
+ increases. 
+<p></p>
+So the only canidates are where there are exactly $[\mu]$  many $P_i$'s equal to $1$, and (if $\mu$ 
+ is not an integer) exactly one $P_i$  equal to $\{\mu\}$, the fractional part of
+ $\mu$, and the rest equal to 0. 
+For example, if $n=5$  and $\mu=2.3$, then one candidate is $(1,1,0.3,0,0)$. 
+<p></p>
+Clearly,
+ for any such candidate the value of $\sum P_i^2$  is the same $([\mu]+\{\mu\}^2)$. Also since we are maximising
+ a continuous function over a compact set, maximum exists. So these must be the maximising choices. 
+<p></p>
+[Thanks to Samyak for providing the answer to part (c).]
+</div></p>
 
 <hr>
 </p>
