--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,11 @@
 <html><body>
 <dl>
+<dt><strong>October 30, 2025:</strong></dt>
+<dd><ul>
+<li>Added Samyak’s brilliant solution of Exercise 17(c) to the<br />
+<a href="condl.html" target="naya">Conditional distribution</a> page.</li>
+</ul>
+</dd>
 <dt><strong>October 29, 2025:</strong></dt>
 <dd><ul>
 <li>Added some extra discussion to the existing hint of Exercise 25 in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
