--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -772,7 +772,7 @@ href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
 class="ans" id="lab17">(a) $\mu=\sum P_i$.
 <p></p>
 (b) The problem is basically minimising $\sum P_i^2$ subject
-to $\sum P_i=\mu$ being fixed. Cauchy-Scwartz might help.  
+to $\sum P_i=\mu$ being fixed. Cauchy-Schwarz might help.  
 <p></p>
 (c) Here we have to maximise $\sum P_i^2$  subject to $\sum P_i=\mu.$  First notice that
  in any maximising $(P_1,...,P_n)$  al but at most one $P_i$  must be either $0$ 
